maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:69: error: not found: value xMax
  if (x < xMax && getIndication(x, y) > getIndication(x + 1, y))
          ^